# ManiuLearn

BitmapManiu/: settings.gradle
BitmapManiu/app/: build.gradle
BitmapManiu/app/src/main/: AndroidManifest.xml
BitmapManiu/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
BitmapManiu/app/src/main/res/layout/: activity_main.xml
BitmapManiu/gradle/wrapper/: gradle-wrapper.properties
CameraX-Decoder-Pull/: settings.gradle
CameraX-Decoder-Pull/app/: build.gradle
CameraX-Decoder-Pull/app/src/main/: AndroidManifest.xml
CameraX-Decoder-Pull/gradle/wrapper/: gradle-wrapper.properties
CameraX-Encoder-Push/: settings.gradle
CameraX-Encoder-Push/app/: build.gradle
CameraX-Encoder-Push/app/src/main/: AndroidManifest.xml
CameraX-Encoder-Push/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CameraX-Encoder-Push/gradle/wrapper/: gradle-wrapper.properties
CommandWebView/: gradlew.bat  settings.gradle
CommandWebView/app/: build.gradle
CommandWebView/app/src/main/: AndroidManifest.xml
CommandWebView/gradle/wrapper/: gradle-wrapper.properties
CommandWebView/weblib/: build.gradle
CommandWebView/weblib/src/main/: AndroidManifest.xml
H264EncoderDemo/: settings.gradle
H264EncoderDemo/app/: build.gradle
H264EncoderDemo/app/src/main/: AndroidManifest.xml
H264PlayerDemo/: settings.gradle
H264PlayerDemo/app/: build.gradle
H264PlayerDemo/app/src/main/: AndroidManifest.xml
H264PlayerDemo/gradle/wrapper/: gradle-wrapper.properties
MediaClip/: build.gradle  settings.gradle
MediaClip/app/: build.gradle
MediaClip/app/src/main/: AndroidManifest.xml
MediaClip/app/src/main/assets/: README
MediaClip/gradle/wrapper/: gradle-wrapper.properties
Opus/: audio.opus  audio_decoded.pcm  settings.gradle
Opus/app/: build.gradle
Opus/app/src/main/: AndroidManifest.xml
Opus/app/src/main/cpp/: AudioAACEncodeChannel.cpp  AudioAACEncodeChannel.h  AudioAACEncodeChannel_fdkaac.cpp  AudioAACEncodeChannel_fdkaac.h  AudioOpusDecodeChannel.cpp  AudioOpusDecodeChannel.h  AudioOpusEncodeChannel.cpp  AudioOpusEncodeChannel.h  CMakeLists.txt  ConvertUtil.cpp  ConvertUtil.h  MyLog.h  native-lib.cpp  native-lib.h
Opus/app/src/main/cpp/faac-1_29_9_2/: CMakeLists.txt
Opus/gradle/wrapper/: gradle-wrapper.properties
ScreenShare-Audio-RTMP/: settings.gradle
ScreenShare-Audio-RTMP/app/: build.gradle
ScreenShare-Audio-RTMP/app/src/main/: AndroidManifest.xml
ScreenShare-Audio-RTMP/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
ScreenShare-Audio-RTMP/discovery/: build.gradle
ScreenShare-Audio-RTMP/gradle/wrapper/: gradle-wrapper.properties
ScreenShare-Pull/: settings.gradle
ScreenShare-Pull/app/: build.gradle
ScreenShare-Pull/app/src/main/: AndroidManifest.xml
ScreenShare-Push/: settings.gradle
ScreenShare-Push/app/: build.gradle
ScreenShare-Push/app/src/main/: AndroidManifest.xml
ScreenShare-Push/discovery/: build.gradle
ScreenShare-Push/gradle/wrapper/: gradle-wrapper.properties
(+180 files in other folders)
